--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ volumes:
     alertmanager: {}
 
 configs:
+  nodename:
+    file: ./nodename
   caddy_config:
     file: ./caddy/Caddyfile
   dockerd_config:
@@ -19,6 +21,8 @@ configs:
     file: ./prometheus/rules/swarm_node.rules
   task_rules:
     file: ./prometheus/rules/swarm_task.rules
+  service_rules:
+    file: ./prometheus/rules/swarm_service.rules
 
 services:
   dockerd-exporter:
@@ -58,14 +62,14 @@ services:
           memory: 64M
 
   grafana:
-    image: stefanprodan/swarmprom-grafana:4.6.0
+    image: qnib/swarmprom-grafana
     networks:
       - net
     environment:
       - GF_SECURITY_ADMIN_USER=${ADMIN_USER:-admin}
       - GF_SECURITY_ADMIN_PASSWORD=${ADMIN_PASSWORD:-admin}
       - GF_USERS_ALLOW_SIGN_UP=false
-      - GF_SERVER_ROOT_URL=${GF_SERVER_ROOT_URL:-localhost}
+      - GF_SERVER_ROOT_URL=${GF_SERVER_ROOT_URL:-http://192.168.99.106}
       - GF_SMTP_ENABLED=${GF_SMTP_ENABLED:-false}
       - GF_SMTP_FROM_ADDRESS=${GF_SMTP_FROM_ADDRESS:-grafana@test.com}
       - GF_SMTP_FROM_NAME=${GF_SMTP_FROM_NAME:-Grafana}
@@ -87,7 +91,7 @@ services:
           memory: 64M
 
   alertmanager:
-    image: stefanprodan/swarmprom-alertmanager:v0.9.1
+    image: qnib/swarmprom-alertmanager
     networks:
       - net
     environment:
@@ -120,9 +124,14 @@ services:
     deploy:
       mode: replicated
       replicas: 1
+      resources:
+        limits:
+          memory: 128M
+        reservations:
+          memory: 64M
 
   node-exporter:
-    image: stefanprodan/swarmprom-node-exporter:v0.14.0
+    image: qnib/swarmprom-node-exporter
     networks:
       - net
     environment:
@@ -132,6 +141,10 @@ services:
       - /sys:/host/sys:ro
       - /:/rootfs:ro
       - /etc/hostname:/etc/nodename
+    ### In case docker-for-mac is used, /etc/hostname is not present in the linuxkit VM
+    #configs:
+    #   - source: nodename
+    #     target: /etc/nodename
     command:
       - '-collector.textfile.directory=/etc/node-exporter/'
       - '-collector.procfs=/host/proc'
@@ -147,7 +160,7 @@ services:
           memory: 64M
 
   prometheus:
-    image: stefanprodan/swarmprom-prometheus:v1.8.2
+    image: qnib/swarmprom-prometheus
     networks:
       - net
     command:
@@ -165,6 +178,8 @@ services:
         target: /etc/prometheus/swarm_node.rules
       - source: task_rules
         target: /etc/prometheus/swarm_task.rules
+      - source: service_rules
+        target: /etc/prometheus/swarm_service.rules
     deploy:
       mode: replicated
       replicas: 1
