--- a/prometheus/conf/prometheus.yml
+++ b/prometheus/conf/prometheus.yml
@@ -8,6 +8,7 @@ global:
 rule_files:
   - "swarm_node.rules"
   - "swarm_task.rules"
+  - "swarm_service.rules"
 
 scrape_configs:
   - job_name: 'prometheus'
